// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminUsers /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bYMpWt kficxQ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with createError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with creating=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bYMpWt kficxQ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-ezOQGI jPOzit"
  >
    <span
      class="sc-bCfvAP kXYLUW"
    >
      Could not load users
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk kcMKQX outer"
      disabled=""
      type="button"
    >
      <span
        class="sc-fLcnxK gaAjG"
      >
        Reload users
      </span>
      <div
        aria-hidden="true"
        class="sc-bBABsx kWWQKm"
      >
        <div
          class="sc-dIfARi hGlUnw"
        >
          <div
            class="sc-hHTYSt kKPHak"
          />
          <div
            class="sc-hHTYSt intAUs"
          />
          <div
            class="sc-hHTYSt fkjyfb"
          />
          <div
            class="sc-hHTYSt bGhnZe"
          />
          <div
            class="sc-hHTYSt iMblJ"
          />
          <div
            class="sc-hHTYSt ihXoZg"
          />
          <div
            class="sc-hHTYSt cLLCzE"
          />
          <div
            class="sc-hHTYSt bYMKzs"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removeError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removing=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requestError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requesting=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updateError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updating=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-ezOQGI jPOzit"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with users 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-ezOQGI jPOzit admin-usersstyles__Count-sc-1qwrqg1-0 cmWvHQ"
  >
    Showing 
    3
     of 
    3
     users
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=new"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="new-+"
                  >
                    New +
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=1"
          id="1"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="name"
                  >
                    name
                  </h1>
                  <span
                    class="sc-ezOQGI jPOzit"
                  >
                    <br />
                    id: 
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=2"
          id="2"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="another"
                  >
                    another
                  </h1>
                  <span
                    class="sc-ezOQGI jPOzit"
                  >
                    <br />
                    id: 
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-cwSeag cWIIHC"
          href="/admin/users?highlight=3"
          id="3"
        >
          <div
            class="sc-lllmON guUaQC"
          >
            <div
              class="sc-iJnaPW erCkEd"
            />
            <div
              class="sc-gikAfH hfGgAP"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="a-third"
                  >
                    a third
                  </h1>
                  <span
                    class="sc-ezOQGI jPOzit"
                  >
                    <br />
                    id: 
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
